# MicroGPT-RLM-PI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.cache/clangd/index/: attention.cpp.BAF35D41F3AB64CB.idx  autograd.cpp.8DE6D49A9B47523F.idx  autograd.hpp.E9C8886F57890D09.idx  dataset.cpp.6310C216F827F901.idx  embedding.cpp.7985B42AE15FD787.idx  generator.cpp.71CDA925AB56B860.idx  logger.cpp.60069038EDF5C56A.idx  logger.hpp.85D20AE233C393A3.idx  main.cpp.2F13D65E3E3CC202.idx  math_ops.cpp.B392E03B104EC5C7.idx  math_ops.hpp.4B283714CC2FE3A8.idx  model.cpp.A5CAB56FF983319B.idx  random.cpp.BCDE002FC632E0EE.idx  random.hpp.18D2EC19BB3C985A.idx  sampler.cpp.E5F99E2968F901F3.idx  tensor.cpp.71E589625CC644A1.idx  tensor.hpp.16378F95691A59E1.idx  tokenizer.cpp.54DD5B0262F1C3C8.idx  trainer.cpp.F17A57959CC2AB20.idx  transformer.cpp.44D3070A00ABAF36.idx
scripts/: download_data.sh
src/core/: autograd.cpp  autograd.hpp  math_ops.cpp  math_ops.hpp  memory_pool.cpp  memory_pool.hpp  module.hpp  tensor.cpp  tensor.hpp
src/inference/: generator.cpp  generator.hpp  sampler.cpp  sampler.hpp
src/model/: embedding.cpp  embedding.hpp  model.cpp  model.hpp
src/model_old/: attention.cpp  attention.hpp  embedding.cpp  embedding.hpp  transformer.cpp  transformer.hpp
src/rlm/: rlm.cpp  rlm.hpp
src/training/: nn.cpp  nn.hpp  tokenizer.cpp  tokenizer.hpp  trainable_model.cpp  trainable_model.hpp  trainer.cpp  trainer.hpp  transformer.cpp  transformer.hpp
src/utils/: logger.cpp  logger.hpp  random.cpp  random.hpp  timer.hpp
